# api-pj-georef

./: #Dockerfile#  #docker-compose.yaml#  .bashrc  .env.test  .gitignore  AGENTS.md  Cargo.toml  Dockerfile  Dockerfile.production  README.md  [  docker-compose-production.yaml  docker-compose.test.yml  docker-compose.yaml  index.html  init.sql  nginx.conf  nginx.production.conf
.devcontainer/: Dockerfile  devcontainer.json  docker-compose.yaml
.github/workflows/: docker-image.yml  e2e-web.yml
history/: TEST_FILES_README.md  pedagios-modelo.csv  pedagios.csv  test_operadoras_invalid_fields.csv  test_operadoras_large_volume.csv  test_operadoras_valid.csv  test_pedagios_import.csv  test_pedagios_invalid_fields.csv  test_pedagios_large_volume.csv  test_tarifas_edge_cases.csv  test_tarifas_large_volume.csv
postgres-data/: postmaster.opts  postmaster.pid
postgres-data/global/: 1260  1262  2671  2672  pg_control
postgres-data/pg_xact/: 0000
src/: db.rs  files.rs  import.rs  lib.rs  main.rs  models.rs  utils.rs
src/auth/: handlers.rs  middleware.rs  mod.rs  models.rs
src/models/: operadora.rs  pedagio.rs  tarifa.rs
src/operadora/: db.rs  model.rs  (+1 more)
tests/: auth_tests.rs  import_tests.rs  mod.rs  operadora_tests.rs  pedagio_tests.rs  tarifa_tests.rs
tmp/: TEST_FILES_README.md  operadora.csv  pedagios-modelo.csv  tarifas.csv  test_operadoras_edge_cases.csv  test_operadoras_invalid_fields.csv  test_operadoras_large_volume.csv  test_operadoras_missing_fields.csv  test_operadoras_valid.csv  test_pedagios_edge_cases.csv  test_pedagios_import.csv  test_pedagios_invalid_fields.csv  test_pedagios_large_volume.csv  test_pedagios_missing_fields.csv  test_pedagios_valid.csv  test_tarifas_invalid_fields.csv  test_tarifas_missing_fields.csv  test_tarifas_valid.csv
web/: Dockerfile  angular.json  package-lock.json  package.json  playwright.config.ts  proxy.conf.e2e.json
web-csr/: README.md  angular.json  package-lock.json  package.json
(+159 files in other folders)
