[package]
name = "bgm"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-multipart = "0.6.1"
actix-web = "4.4.0"
deadpool-postgres = "0.13.0"
env_logger = "0.11.3"
futures-util = "0.3.30"
serde = { version = "1.0.189", features = ["derive"] }
serde_json = "1.0.107"
sql-builder = "3.1.1"
tokio = "1.37.0"
tokio-postgres = { version = "0.7.10", features = ["with-chrono-0_4"] }
actix-cors = "0.7.0"
log = "0.4.21"
sqlx = "0.7.4"
chrono = { version = "0.4.40", features = ["serde"] }
